Complete vertical spacing for headings, fix some others

--- a/src/theme/_layout.scss
+++ b/src/theme/_layout.scss
@@ -158,11 +158,11 @@ footer {
     @include adjustMarginsToContainer($default-container-width);
   }
 
-  .block {
+  & > .block {
     // This is the default, same color spacing for all blocks
     margin-bottom: $block-vertical-space;
   }
-  
+
   &:last-child {
     margin-bottom: -1rem !important;
   }
